small-fixes
- fixed Jade [deprecation
warning](http://stackoverflow.com/q/18343084/2256325)
- fixed KM error in console because it wasn’t loaded yet
- fixed Core builder that was showing More modules
- fix padding in header and footer to not overlap with logo near the
mobile/desktop breakpoint width
- fixed position of examples being misplaced during resize

--- a/views/css/header.styl
+++ b/views/css/header.styl
@@ -33,7 +33,7 @@
 				border-radius: 3px;
 				color: #000000;
 				font-size: 1em;
-				padding: 0.3em 1em 0.3em 1em;
+				padding: 0.3em 0.5em 0.3em 0.5em;
 				cursor: pointer;
 		
 	ul	
@@ -73,6 +73,7 @@ body.mootools #global-bar
 		font-size: 0.85em;
 		font-weight: 400;
 		padding: 0.4em 0.5em;
+		width: 12em;
 		&:focus
 			border-color: #acaaa7;
 
