--- a/views/css/media.styl
+++ b/views/css/media.styl
@@ -251,6 +251,7 @@
 
 		section
 			position: relative;
+			clear: both;
 
 		div
 			margin-top: 1.5em;
@@ -407,7 +408,9 @@
 		div
 			float: left;
 			margin-left: 2em;
-			width: 8.6em;
+			width: 8.8em;
+		div:first-of-type
+			margin-left: 0.5em;
 
 		h3
 			margin-bottom: 0.3em;
